--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "eslint-config-prettier": "^6.3.0",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^11.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
