--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive'"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,14 +14,12 @@
     "dotenv": "^8.1.0",
     "eslint-config-prettier": "^6.3.0",
     "express": "^4.17.1",
-    "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^11.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -28,6 +27,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "mocha": "^6.2.2",
     "prettier": "^1.18.2"
   }
 }
